# ratatui-template

./: cargo-generate.toml
complex-async/: Cargo.toml
complex-async-logs/: Cargo.toml
complex-async-logs/src/: error.rs  lib.rs  logger.rs  main.rs
complex-async/src/: app.rs  lib.rs  main.rs  screen_manager.rs
complex-async/src/screen_manager/: main.rs
simple/: Cargo.toml
simple-async/: Cargo.toml
simple-async/src/: app.rs
simple-workspace/: Cargo.toml
simple-workspace/cli/src/: lib.rs
simple-workspace/client/: Cargo.toml
simple-workspace/client/src/: app.rs  error.rs  main.rs  screen_manager.rs
simple-workspace/client/src/screen_manager/: tabone.rs  tabtwo.rs
simple/src/: app.rs
