[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["macros", "formatting"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
