[workspace]
members = ["cli", "client"]
default-members = ["client"]
resolver = "2"

[workspace.dependencies]
cli = { path = "cli" }
client = { path = "client" }

clap = { version = "4.5.20", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
] }
